--- a/servidor/whereEvent/build.xml
+++ b/servidor/whereEvent/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="whereEvent" default="default" basedir=".">
-    <description>Builds, tests, and runs the project whereEvent.</description>
+<project name="whereEventNew" default="default" basedir=".">
+    <description>Builds, tests, and runs the project whereEventNew.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
